# alarm-clock

./: CMakeLists.txt
src/: main.c
src/common/: common.h
src/input/: input.c  input.h
src/seven_segment/: seven_segment.c  seven_segment.h
src/time/: time.c  time.h
